--- a/Course3/conFusion/bower.json
+++ b/Course3/conFusion/bower.json
@@ -26,10 +26,11 @@
     "font-awesome": "~4.4.0",
     "angular": "~1.4.7",
     "angular-route": "^1.6.5",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "^1.0.5"
   },
   "resolutions": {
     "angular": "~1.4.7",
-    "angular-route": "~1.4.8"
+    "angular-route": "~1.4.8",
+    "angular-ui-router": "~0.2.15"
   }
 }
